Fix text size on mobile view

--- a/style.css
+++ b/style.css
@@ -731,9 +731,8 @@ textarea.materialize-textarea {
 	.home-inner {padding: 30px;}
   	.home-title {font-size: 55px;}
   	.resume-btn { margin-top: 30px;}
-  	.blog-post-content h2, .blog-post-content h2 a {font-size: 16px;}
-  	.card .card-content p {font-size: 13px;}
-  	.card .card-action a {margin-right: 0px;}
+  	.card .card-content p, .card .card-reveal p {font-size: 13px;}
+  	.card .card-content ul li, .card .card-reveal ul li {font-size: 13px;}
   	.contact-map{height: 484px;}
   	.up-btn {left: 45.5%;}
 }
@@ -744,18 +743,8 @@ textarea.materialize-textarea {
   	.left-sidebar{display: table-footer-group;float: none !important;}
  	.swith-to-left{display: table-header-group;float: none !important;}
  	.header-title {font-size: 30px;}
- 	.single-sidebar h3 {font-size: 18px;}
- 	.blog-content h1 {font-size: 35px;}
-	.blog-content h2{font-size: 30px;}
-  	.blog-content h3 {font-size: 21px;}
-  	.blog-content h4 {font-size: 18px;}
-  	.blog-content h5{font-size: 15px;}
-  	.blog-content p{font-size: 13px;}
-  	.blog-content blockquote p {font-size: 15px;}
-  	.blog-post-content h2, .blog-post-content h2 a {font-size: 15px;}
-  	.card .card-content p {font-size: 11px;}
-  	.pagination li {height: 25px;width: 25px;}
-  	.custom-pagination li a {font-size: 12px;line-height: 25px;}
+  	.card .card-content p, .card .card-reveal p {font-size: 13px;}
+  	.card .card-content ul li, .card .card-reveal ul li {font-size: 13px;}
 }
 
 @media(max-width:480px ){
@@ -771,18 +760,15 @@ textarea.materialize-textarea {
   	.about-inner-right > p { font-size: 13px;}
   	.personal-information > h3 {font-size: 20px;}
   	.personal-information ul li {font-size: 13px;}
-  	.title {font-size: 25px;line-height: 1; margin-bottom: 30px;}
-  	.skill-inner p {font-size: 13px;line-height: 25px;}
-  	.experience-inner > p {font-size: 13px;line-height: 25px;}
+  	.section-title {font-size: 25px;line-height: 1; margin-bottom: 30px;}
+  	.skills-inner p, .experience-inner p, .education-inner p, .projects-inner p, #footer p {font-size: 13px;line-height: 25px;}
   	.contact-map {height: 350px;margin-top: 30px;}
   	.copyright-info {text-align: center; width: 100%;margin-top: 5px;}
   	.design-info {text-align: center;width: 100%;margin-top: 15px;margin-bottom: 0px;}
   	.up-btn {left: 43%;}
   	.header-title { font-size: 20px;}
-  	.blog-post-content h2, .blog-post-content h2 a {font-size: 16px;}
-  	.card .card-content p {font-size: 13px;}
-  	.pagination li {height: 25px;width: 25px;}
-  	.custom-pagination li a {font-size: 12px;line-height: 25px;}
+  	.card .card-content p, .card .card-reveal p {font-size: 13px;}
+  	.card .card-content ul li, .card .card-reveal ul li {font-size: 13px;}
 }
 
 @media(max-width:360px ){
@@ -793,18 +779,16 @@ textarea.materialize-textarea {
 	.up-btn {left: 40.7%;}
   	.personal-information > h3 {font-size: 18px;}
   	.reply-btn {font-size: 12px;padding: 6px 8px;}
-  	.blog-content h2 {margin-bottom: 0;}
-  	.pagination li {width: 25px;margin: 0 5px;}
 }
 
 @media(max-width:320px ){
 	nav .brand-logo { font-size: 1.1rem; }
 	.call-to-about {bottom: -120px; left: 39%;}
 	.home-title { font-size: 30px;}
-  	.experience-title { font-size: 14px;}
+  	.section-title { font-size: 14px;}
+  	.reveal-title {font-size: 17px !important;}
   	.single-skill-title { font-size: 17px !important;}
   	.up-btn {left: 39%;}
   	.header-title {font-size: 16px;line-height: 30px;}
   	.children {margin-left: 10px;}
-    .pagination li {width: 25px;margin: 0 5px;}
 }
